[gd_scene load_steps=11 format=2]

[ext_resource path="res://General/ShopMenu/ItemSelectionMenu/ItemSelectionMenu.gd" type="Script" id=1]
[ext_resource path="res://SF1/Items/Usables/MedicalHerb.tres" type="Resource" id=2]
[ext_resource path="res://SF1/Items/Weapons/ShortSword.tres" type="Resource" id=3]
[ext_resource path="res://Assets/SF1/ShiningForceMenuFont.tres" type="FontFile" id=4]
[ext_resource path="res://SF1/Items/Weapons/Spear.tres" type="Resource" id=5]
[ext_resource path="res://SF1/Items/Weapons/WoodenStaff.tres" type="Resource" id=6]
[ext_resource path="res://SF1/Items/Weapons/HandAxe.tres" type="Resource" id=7]
[ext_resource path="res://SF1/Items/Weapons/WoodenArrow.tres" type="Resource" id=8]
[ext_resource path="res://SF1/Items/Weapons/BronzeLance.tres" type="Resource" id=9]

[sub_resource type="CompressedTexture2D" id=1]
load_path = "res://.import/ShiningForceTextBackground.png-9ed310a4373b06707cc2cedc48b3ad37.stex"

[node name="ShopItemSelectionMenuNode" type="Node2D"]
script = ExtResource( 1 )
item_list = [ ExtResource( 2 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 6 ) ]

[node name="ShopItemsStatNinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = 30.0
offset_top = 12.0
offset_right = 380.0
offset_bottom = 59.0
scale = Vector2( 0.75, 0.75 )
texture = SubResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ShopItemsStatNinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 21.3333
offset_top = 24.0
offset_right = 7.33334
offset_bottom = -15.0
custom_constants/separation = 28
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ItemInfoStatNinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = 14.0
offset_top = 42.0
offset_right = 140.0
offset_bottom = 91.0
scale = Vector2( 0.75, 0.75 )
texture = SubResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ItemNameLabel" type="Label" parent="ItemInfoStatNinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.66667
offset_top = 9.66668
offset_right = -14.3333
offset_bottom = -17.3333
custom_fonts/font = ExtResource( 4 )
text = "Medical Herb"
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GoldLabel" type="Label" parent="ItemInfoStatNinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.33333
offset_top = 32.6667
offset_right = -8.66667
offset_bottom = -7.33333
custom_fonts/font = ExtResource( 4 )
text = "100"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SelectionControl" type="Node2D" parent="."]
position = Vector2( 3.8147e-06, 0.31498 )

[node name="TopSegmentColorRect" type="ColorRect" parent="SelectionControl"]
offset_left = 37.0
offset_top = 18.0
offset_right = 54.0
offset_bottom = 19.0
color = Color( 0.741176, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LeftSegmentColorRect" type="ColorRect" parent="SelectionControl"]
offset_left = 35.9221
offset_top = 18.9961
offset_right = 36.9221
offset_bottom = 39.9961
color = Color( 0.741176, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RightSegmentColorRect" type="ColorRect" parent="SelectionControl"]
offset_left = 54.0465
offset_top = 18.8573
offset_right = 55.0465
offset_bottom = 39.8573
color = Color( 0.741176, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BottomSegmentColorRect" type="ColorRect" parent="SelectionControl"]
offset_left = 37.0
offset_top = 40.0
offset_right = 54.0
offset_bottom = 41.0
color = Color( 0.741176, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TopLeftColorRect" type="ColorRect" parent="SelectionControl"]
offset_left = 37.0263
offset_top = 19.017
offset_right = 38.0263
offset_bottom = 20.017
color = Color( 0.741176, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TopRightColorRect" type="ColorRect" parent="SelectionControl"]
offset_left = 53.0683
offset_top = 18.991
offset_right = 54.0683
offset_bottom = 19.991
color = Color( 0.741176, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BottomLeftColorRect" type="ColorRect" parent="SelectionControl"]
offset_left = 36.9638
offset_top = 39.0379
offset_right = 37.9638
offset_bottom = 40.0379
color = Color( 0.741176, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BottomRightColorRect" type="ColorRect" parent="SelectionControl"]
offset_left = 52.9758
offset_top = 39.0294
offset_right = 53.9758
offset_bottom = 40.0294
color = Color( 0.741176, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
